@@ -1,5 +1,6 @@
 # Expect script for common symbol tests
-#   Copyright 2003, 2005, 2006, 2007, 2008 Free Software Foundation, Inc.
+#   Copyright 2003, 2005, 2006, 2007, 2008, 2009
+#   Free Software Foundation, Inc.
 #
 # This file is part of the GNU Binutils.
 #
@@ -185,7 +186,18 @@ if {   ![ld_compile "$CC $CFLAGS" $srcdir/$subdir/common1a.c tmpdir/common1a.o]
 global ld
 global link_output
 
-if { [ld_simple_link $ld tmpdir/common1.o "-r tmpdir/common1a.o tmpdir/common1b.o"] } {
+set options "-r tmpdir/common1a.o tmpdir/common1b.o"
+
+# SH64 targets needs an extra ld option for this test.
+if [istarget sh64*-*-*] {
+    if [istarget sh64*l*-*-*] {
+	set options "-mshlelf32 $options"
+    } else {
+	set options "-mshelf32 $options"
+    }
+}
+
+if { [ld_simple_link $ld tmpdir/common1.o $options] } {
     unresolved $test1w1
     return
 }
@@ -211,7 +223,18 @@ if { [dump_common1 $test1c1] } {
     pass $test1c1
 }
 
-if { [ld_simple_link $ld tmpdir/common1.o "-r tmpdir/common1b.o tmpdir/common1a.o"] } {
+set options "-r tmpdir/common1b.o tmpdir/common1a.o"
+
+# SH64 targets needs an extra ld option for this test.
+if [istarget sh64*-*-*] {
+    if [istarget sh64*l*-*-*] {
+	set options "-mshlelf32 $options"
+    } else {
+	set options "-mshelf32 $options"
+    }
+}
+
+if { [ld_simple_link $ld tmpdir/common1.o $options] } {
     unresolved $test1w2
     return
 }
